changed .row to .flex-row

--- a/css/masonry.css
+++ b/css/masonry.css
@@ -22,7 +22,7 @@ a {
   display: flex;
 }
 
-.row            { 
+.flex-row            { 
   -webkit-flex-direction: row; 
   flex-direction: row;
 }
