--- a/css/masonry.css
+++ b/css/masonry.css
@@ -1,4 +1,5 @@
 
+/*
 body {
   margin: 0;
 }
@@ -7,6 +8,7 @@ a {
   border:none;
   border:hidden;
 }
+*/
 
 .flex-container {
   padding: 0;
@@ -94,11 +96,11 @@ a {
 
 
 .img-1 {
-    background-image: url("../img/01_Mantel_Network_Interior.jpg");
+    background-image: url("https://images.unsplash.com/21/mac-glasses.JPG?dpr=1&auto=format&crop=entropy&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb");
 }
 
 .img-2 {
-    background-image: url("../img/Edition3Description.jpg");
+    background-image: url("https://images.unsplash.com/21/mac-glasses.JPG?dpr=1&auto=format&crop=entropy&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb");
 }
 
 .img-3 {
@@ -106,71 +108,71 @@ a {
 }
 
 /*.img-4 {
-    background-image: url("../img/03_Network_Diptych_Interior.jpg");
+    background-image: url("https://images.unsplash.com/21/mac-glasses.JPG?dpr=1&auto=format&crop=entropy&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb");
 }*/
 
 .img-5 {
-    background-image: url("../img/04_Illusion4.3.jpg");
+    background-image: url("https://images.unsplash.com/21/mac-glasses.JPG?dpr=1&auto=format&crop=entropy&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb");
 }
 
 .img-6 {
-    background-image: url("../img/05_Black_Frame_Illusion10.0.jpg");
+    background-image: url("https://images.unsplash.com/21/mac-glasses.JPG?dpr=1&auto=format&crop=entropy&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb");
 }
 
 .img-7 {
-    background-image: url("../img/Edition4Description.jpg");
+    background-image: url("https://images.unsplash.com/21/mac-glasses.JPG?dpr=1&auto=format&crop=entropy&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb");
 }
 
 .img-8 {
-    background-image: url("../img/06_Illusion1.0.jpg");
+    background-image: url("https://images.unsplash.com/21/mac-glasses.JPG?dpr=1&auto=format&crop=entropy&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb");
 }
 
 .img-9 {
-    background-image: url("../img/08_Savannah.jpg");
+    background-image: url("https://images.unsplash.com/21/mac-glasses.JPG?dpr=1&auto=format&crop=entropy&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb");
 }
 
 .img-10 {
-    background-image: url("../img/09_Baltimore.jpg");
+    background-image: url("https://images.unsplash.com/21/mac-glasses.JPG?dpr=1&auto=format&crop=entropy&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb");
 }
 
 .img-11 {
-    background-image: url("../img/10_Duluth.jpg");
+    background-image: url("https://images.unsplash.com/21/mac-glasses.JPG?dpr=1&auto=format&crop=entropy&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb");
 }
 
 .img-12 {
-    background-image: url("../img/11_Credenza_Case_Studies_Interior.jpg");
+    background-image: url("https://images.unsplash.com/21/mac-glasses.JPG?dpr=1&auto=format&crop=entropy&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb");
 }
 
 .img-13 {
-    background-image: url("../img/12_Newport.jpg");
+    background-image: url("https://images.unsplash.com/21/mac-glasses.JPG?dpr=1&auto=format&crop=entropy&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb");
 }
 
 .img-14 {
-    background-image: url("../img/13_Mix_Match_Ed1_2.jpg");
+    background-image: url("https://images.unsplash.com/21/mac-glasses.JPG?dpr=1&auto=format&crop=entropy&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb");
 }
 
 /*.img-15 {
-    background-image: url("../img/13_Mix_Match_Ed1_2.jpg");
+    background-image: url("https://images.unsplash.com/21/mac-glasses.JPG?dpr=1&auto=format&crop=entropy&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb");
 }*/
 
 .img-16 {
-    background-image: url("../img/14_34C.jpg");
+    background-image: url("https://images.unsplash.com/21/mac-glasses.JPG?dpr=1&auto=format&crop=entropy&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb");
 }
 
 /*.img-17 {
-    background-image: url("../img/Edition4Description.jpg");
+    background-image: url("https://images.unsplash.com/21/mac-glasses.JPG?dpr=1&auto=format&crop=entropy&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb");
 }
 
 .img-18 {
-    background-image: url("../img/Edition4Description.jpg");
+    background-image: url("https://images.unsplash.com/21/mac-glasses.JPG?dpr=1&auto=format&crop=entropy&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb");
 }
 
 .img-19 {
-    background-image: url("../img/Edition4Description.jpg");
+    background-image: url("https://images.unsplash.com/21/mac-glasses.JPG?dpr=1&auto=format&crop=entropy&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb");
 }
 
 .img-20 {
-    background-image: url("../img/Edition4Description.jpg");
+    background-image: url("https://images.unsplash.com/21/mac-glasses.JPG?dpr=1&auto=format&crop=entropy&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb");
 }*/
 
 
