--- a/css/masonry.css
+++ b/css/masonry.css
@@ -104,7 +104,7 @@ a {
 }
 
 .img-3 {
-    background-image: url("../img/03_Network_Diptych_Interior.jpg");
+    background-image: url("https://images.unsplash.com/21/mac-glasses.JPG?dpr=1&auto=format&crop=entropy&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb");
 }
 
 /*.img-4 {
